--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,13 @@ body {
   min-height: 100vh;
   margin: 0;
   background-color: #f8f9fa;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+main {
+  flex: 1;
 }
 
 ul,
