--- a/app/(private routes)/notes/filter/LayoutNotes.module.css
+++ b/app/(private routes)/notes/filter/LayoutNotes.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   height: 100vh;
+  flex: 1;
 }
 
 .sidebar {
@@ -11,7 +12,7 @@
   padding: 16px;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  /* height: 100vh; */
   border-right: 1px solid #ddd;
 }
 
